# gdoc2netcfg

./: .gitignore  CLAUDE.md  Makefile  gdoc2netcfg.toml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  dns-naming.md  ha-mqtt-discovery-reference.md  nsdp-protocol.md  sensors2mqtt-mqtt-credentials-requirements.md  traffic-monitoring-research.md
docs/plans/: 2026-02-28-ipv6-nat64-iot-design.md  2026-02-28-ipv6-nat64-iot-plan.md  2026-04-09-sqlite-storage.md
etc/: gdoc2netcfg-reachability-config.path  gdoc2netcfg-reachability-config.service  gdoc2netcfg-reachability.service
scripts/: etckeeper_commit.py  ha-create-reachability-dashboard.py  ha-plug-dashboard.html  ha-reachability-dashboard.html  ha-switch-dashboard.html  ha-switches.py
src/gdoc2netcfg/: config.py
src/nsdp/: parsers.py
tests/fixtures/: expected_dnsmasq.conf  sample_iot.csv
tests/test_cli/: test_build_hosts.py  test_credential_merge.py  test_cron.py  test_db_info.py  test_fetch_credentials.py  test_main.py  test_password.py  test_pipeline_db_only.py  test_reachability_db_only.py  test_scan_freshness.py  test_sensors2mqtt_cli.py  test_sites_enrich.py  test_tasmota_register_broker.py  test_zigbee_db.py
tests/test_constraints/: test_bridge_validation.py
tests/test_derivations/: test_host_builder.py  test_ipv6_capability.py  test_mqtt_credentials.py  test_sensors2mqtt.py  test_tasmota_credentials.py
tests/test_generators/: test_dnsmasq.py  test_dnsmasq_external.py  test_dnsmasq_fcrdns.py  test_known_hosts.py  test_tayga.py  (+1 more)
utils/: build-insecure-ssh-keyscan.py
(+103 files in other folders)
